page.showUnstableWarning() -> site.isUnstable()